--- a/index.html
+++ b/index.html
@@ -12,9 +12,55 @@
 
 <body>
     <div> 
-        <p>
-            Style tester.
-        </p>
+        <nav class="top-nav">
+            <span class="left">
+                <a href="#">About</a>
+                <a href="#">Store</a>
+            </span>
+            
+            <span class="right">
+                <div>
+                    <a href="#">Gmail</a>
+                    <a href="#">Images</a> 
+                </div>
+
+                <div class="pics">
+                    <div class="apps">
+                        <a href="#"> <img src="#"> </a>
+                    </div>
+                    <div class="login">
+                        <a href="#">Sign In</a>
+                    </div>
+                </div>
+
+            </span>
+        </nav>
+
+        <div class="main">
+            <div class="img"> 
+                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"> 
+            </div>
+            <form class="search">
+                <input type="text">
+                <input type="submit"> Google
+                <input type="submit"> I'm feeling lucky
+            </form>
+        </div>
+
+        <nav class="bottom-nav">
+            <span class="left"> 
+                <a href="#">Advertising</a>
+                <a href="#">Business</a>
+                <a href="#">How Search Works</a>
+            </span>
+
+            <span class="right">
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+                <a href="#">Settings</a>
+            </span>
+        </nav>
+
     </div>
 </body>
 
