--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
 <body>
     <div> 
-        <nav class="top-nav">
+        <nav class="top-nav"> 
+
             <span class="left">
                 <a href="#">About</a>
                 <a href="#">Store</a>
             </span>
-            
+
             <span class="right">
                 <div>
                     <a href="#">Gmail</a>
@@ -25,10 +26,7 @@
                 </div>
 
                 <div class="pics">
-                    <div class="apps">
-                        <a href="#"> <img src="#"> </a>
-                    </div>
-                    <div class="login">
+                        <a href="#">Apps</a>
                         <a href="#">Sign In</a>
                     </div>
                 </div>
@@ -41,24 +39,34 @@
                 <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"> 
             </div>
             <form class="search">
-                <input type="text">
-                <input type="submit"> Google
-                <input type="submit"> I'm feeling lucky
+                <div class="search-box">
+                    <input type="text">
+                </div>
+
+                <div class="submit-box">
+                    <input type="submit" value="Google">
+                    <input type="submit" value="I'm feeling lucky">
+                </div>
             </form>
         </div>
 
         <nav class="bottom-nav">
+
             <span class="left"> 
                 <a href="#">Advertising</a>
                 <a href="#">Business</a>
                 <a href="#">How Search Works</a>
             </span>
 
+            <span class="test"> this </span>
+
             <span class="right">
                 <a href="#">Privacy</a>
                 <a href="#">Terms</a>
                 <a href="#">Settings</a>
             </span>
+
+            <span class="test"> that </span>
         </nav>
 
     </div>
