reworked how search box area is centered

--- a/index.html
+++ b/index.html
@@ -38,16 +38,19 @@
             <div class="img"> 
                 <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"> 
             </div>
+            <div class="search-box">
             <form class="search">
-                <div class="search-box">
                     <input type="text">
                 </div>
-
-                <div class="submit-box">
-                    <input type="submit" value="Google">
-                    <input type="submit" value="I'm feeling lucky">
-                </div>
             </form>
+
+            <div class="center">
+
+            <div class="submit-box">
+                    <input type="submit" value="Google">
+                    <input type="submit" value="I'm Feeling Lucky">
+                </div>
+            </div>
         </div>
 
         <nav class="bottom-nav">
